--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -1,13 +1,34 @@
 .cardConteiner {
-  width: 1200px;
+  width: 1240px;
+  height: 100vh;
 }
 
 .list {
     display: flex;
+    flex-wrap: wrap;
    gap: 50px;
 
 
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.btn {
+  width: 196px;
+  padding: 10px 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+  text-transform: uppercase;
+  color: #373737;
+  background: #ebd8ff;
+  box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.25);
+  border-radius: 10.31px;
+
+  
+}
+.btn:hover {
+  background: #5CD3A8;
 }
