--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -46,8 +46,7 @@ img {
     #5736a3 54.28%,
     #4b2a99 78.99%
   );
-  box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.06),
-  inset 0px -1.72px 3.44px #ae7be3, inset 0px 3.44px 2.58px #fbf8ff;
+  box-shadow: inset 0px -1.72px 3.44px #ae7be3, inset 0px 3.44px 2.58px #fbf8ff;
 }
 
 .ellipse {
@@ -56,13 +55,22 @@ img {
   height: 80px;
   left: 150px;
   top: 178px;
- border:8px solid #ebd8ff;
- box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.06),
- inset 0px -1.72px 3.44px #ae7be3, inset 0px 3.44px 2.58px #fbf8ff;
-border-radius: 50%;
-overflow: hidden;
+  border: 4px solid  transparent;
+/* background-image: url(../../images/Ellipse.png); */
+/* border: 8px solid  #d1bce7;
+  box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.06),
+    inset 0px -1.71846px 3.43693px #ae7be3, inset 0px 3.43693px 2.5777px #fbf8ff; */
+  border-radius: 50%;
+  overflow: hidden;
+
 }
 
+.imgAllipse{
+  position: absolute;
+  z-index: 10;
+  left: 142px;
+  top: 175px;
+}
 
 .btn {
   width: 196px;
@@ -77,11 +85,9 @@ overflow: hidden;
   background: #ebd8ff;
   box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.25);
   border-radius: 10.31px;
-
-  
 }
-.btn.btn_active{
-  background: #5CD3A8;
+.btn.btn_active {
+  background: #5cd3a8;
 }
 .text {
   font-family: 'Montserrat', sans-serif;
