--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* @import-normalize; */
- /* bring in normalize.css styles */
+/* bring in normalize.css styles */
 *,
 *::before,
 *::after {
@@ -7,11 +7,15 @@
 }
 body {
   margin: 0;
+  height: 120%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(../src/images/BG.jpg);
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 code {
