--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -15,8 +15,8 @@ img {
 }
 .card {
   position: relative;
-  width: 380px;
-  height: 460px;
+  width: 370px;
+  height: 450px;
   padding: 28px 36px;
   border-radius: 20px;
   background: linear-gradient(
@@ -36,7 +36,7 @@ img {
 
 .rectangle {
   position: absolute;
-  width: 380px;
+  width: 369px;
   height: 8px;
   left: 0px;
   top: 214px;
@@ -81,6 +81,7 @@ img {
   background: #ebd8ff;
   box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.25);
   border-radius: 10.31px;
+  cursor: pointer;
 }
 .btn.btn_active {
   background: #5cd3a8;
