--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,8 +1,8 @@
 .btn {
   display: block;
   margin: 0 auto;
-  width: 196px;
-  padding: 10px 10px;
+  width: 185px;
+  padding: 8px 10px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 18px;
@@ -12,18 +12,19 @@
   background: #ebd8ff;
   box-shadow: 0px 3.44px 3.44px rgba(0, 0, 0, 0.25);
   border-radius: 10.31px;
+  cursor: pointer;
 }
-.btn:focus {
+.btn:focus, .btn:hover {
   background-color: #5cd3a8;
 }
 
 .card {
-  position: absolute;
+  position: relative;
   overflow: hidden;
   width: 200px;
   height: 170px;
-  left: 85%;
-  top: 10%;
+  margin-top: 20px ;
+ margin-left: 50px;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
@@ -33,6 +34,8 @@
   background-size:contain;
     border: 4px solid #ebd8ff;
   border-radius: 8px;
+ 
+
 }
 
 .overlay {
@@ -43,6 +46,7 @@ padding :28px 0 5px;
   width: 100%;
   height: 100%;
     z-index: 10;
+    transition: top 1000ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .card:hover .overlay,
